src/app/components/feed/feed.css
.feed-container a, .feed-container a:visited, .feed-container a:hover, .feed-container a:active {
    color: inherit;
    text-decoration: none;
    color: #444 !important;
}

.feed {
    overflow-wrap: break-word;
    /*word-break: break-all;*/
	border-style: solid;
    border-width: 1px;
	border-color: #F0F8FF;
	background-color: white;
	max-width: 640px;
	margin: 0 auto;
	width:100% !important;
}

.feed-image {
    display: block;
    height: 200px;
    line-height: 200px;
	margin-left: auto;
	margin-right: auto;
    width: 100%;
    overflow: hidden;
    margin-bottom: 10px;
}

.feed-image img {
    height: auto;
    position: relative;
	width: 100%;
}

.image-feed-body {
	max-width: 100%;
	padding: 0px;
}

.feed-title {
	padding-left:5px;
    padding-right:5px;
    margin-bottom: 10px;
}

.feed-container{
	margin-top:5px;
	margin-bottom:20px;
} 


.feed .feed-header {
	  background-color:white;
		padding-top:10px;
		padding:5px;
    border-bottom: 1px solid #F0F8FF;
		cursor: pointer;
}

.feed .feed-header img {
	border-radius: 50%;
	height: 28px;
	width: 28px;
}

.feed .feed-header ul li {
    display: inline; 
}

.feed .feed-header .feed-date {
    float: right; 
}


.feed-body {
	cursor: pointer;
	width:100% !important;
}

.feed-body lazy-img {
	max-width: 100% !important;
	display: block;
	margin-left: auto;
	margin-right: auto;
	cursor: pointer;
}

.feed-body p {
	padding: 8px;
	font-size: 15px;
	cursor: pointer;
}

.feed .feed-footer .hashtag {
	padding: 2px;
	font-weight: bold;
	font-size: 12px;
	cursor: pointer;
}

.feed .feed-footer .feed-actions .list {
    display: inline; 
    padding-left:5px;
    padding-top:4px;
}

.feed .feed-footer .feed-actions .list li {
    display: inline;
    padding-left:10px;
}

.feed-hashtag {
	font-family: 'Helvetica', sans-serif;
	font-size: 8px;
}

@media (max-width: 990px) {
	.feed-row {
		margin-left: -40px;
		margin-right: -40px;
	}
  }

